--- a/bookdown-demo.Rmd
+++ b/bookdown-demo.Rmd
@@ -1,3 +1,113 @@
+--- 
+title: "The EMaC R Manual"
+author: "Alex Sciuto"
+date: "Last Updated Febuary 2020"
+site: bookdown::bookdown_site
+output: bookdown::gitbook
+documentclass: book
+bibliography: [book.bib, packages.bib]
+biblio-style: apalike
+link-citations: yes
+github-repo: rstudio/bookdown-demo
+always_allow_html: true
+description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
+---
+
+# How to Install R {#download}
+
+This is the EMaC manual for how to wrangle, analyze, and visualize data in **R**. I will review a few key packages, in addition to explaing their key functions, with real data examples. 
+
+There are two things you need to do to install R on your computer. First, you would need to install the latest version of R which you would download and install from this link: [R-download](https://cloud.r-project.org/). Once you run and install R onto your computer, you would need to install R-Studio. R studio is the graphic user interface (GUI) where you can place all of your R-code. Follow this link: [R-Studio Desktop Download](https://rstudio.com/products/rstudio/download/). Once you have these two programs installed, all you need to do is launch R-studio Desktop and you are ready to go..
+
+
+
+<!--chapter:end:index.Rmd-->
+
+# Introduction to Programming in R {#intro}
+
+Before you can do data wrangling, statiscs, and visualization using R for cognitive psychology research, you need to learn the basic syntax in R. This chapter will introduce the basics.
+
+## Variables in R
+
+R can manipulate and wrangle all kinds of data, these data could be stored in a handful of variables that we can then work with. The first one we will be talking about is numeric. 
+
+### Numeric
+
+a numeric is a number (including decimals) that can be stored within a variable. Here is an example:
+
+***` x = 2 `***
+
+Here, we assigned the numeric value `2` to the variable `x`. Thus, if we were to do arithemtic, `x` will be treated as `2`. Moreover, there are specific functions in R we can use in order to do arithmetic with numeric variables. Here are a few examples:
+
+| Arithemtic | R-Input   | R-Output   |    
+| :-------------: |:-------------:|:---:|
+| Addition: | `x + 2`|`4`|
+| Substraction: | `x - 2 `|`0`|
+| Division:  | `x / 2  `|`1`|
+| Multiplication: |`x * 2`|`4`|
+| Exponent: | `x ^ 2 `|`4`|
+
+
+
+### Character
+
+A character is a combination of characters (either letters and/or numbers) that can be stored within a variable. Moreover, it is very important that you place the character between quotation marks. Here is an example:
+
+***`x = "Cognitive Psychology"`***
+
+Here, we assigned the character value `"Cognitive Psychology"` to the variable `x`. There are ways to manipulate character type variables, and also modify them. However, we will touch on that later.
+
+### Logical 
+
+A logical can only have two possible values, `TRUE` and `FALSE` that can be stored within a variable. This is not typically a varaible type that you will need to assign variable values to. However, the logical type variable is extremely important becuase a lot of functions in R return a logical variable. We will dive into some of these functions 
+
+### Vector 
+
+A vector is multiple variables stored into one data-set. Vectors can contain any variable type: character, numeric, string, and logical. When you are declaring a a vector type variable, you typically have to use the concatenate function `c()`. Here is an example:
+
+`x = c(1,2,3,4)`
+
+`x = c("I", "like", "Cognitive", "Psychology")`
+
+`x = c(TRUE, FALSE, FALSE, TRUE)`
+
+To reference a vector varaible, you need to use `[]` and inside the brackets, you have to specify the index of where the given variable in the vector is. Here is an example
+
+```{r}
+x = c("10", "20", "30", "40")
+x[4]
+```
+
+Here, we assigned the numbers: `10, 20, 30, 40` to the vector `x`. `"Cognitive Psychology"` to the variable `x`. There are ways to manipulate character type variables, and also modify them. However, we will touch on that later.
+
+## Logical Operators & if-Statements
+
+Now that you have a basic understanding of how variables work in R, the next step is to learn how to use logical operators in order to specifiy what are the specific conditions under which you want your variables to be manipulated. The main way to do this in R is by using logical operators. 
+
+***` x = 2 `***
+
+Here, we assigned the numeric value `2` to the variable `x`. Thus, if we were to apply logical operators to `x`, `x` will be treated as `2`. Here are examples of all of the logical operators:
+
+| Logical Operators      | Description   |   R-Input   | R-Output|  
+| ------------- |:-------------:|:--:|:--:|
+| <     | less than | x < 10 | TRUE |
+| <=     | less than or equal to |x <= 2| TRUE|
+| > | greater than    | x > 1| TRUE|
+| >= | greater than or equal to |x >= 3| FALSE| 
+| == | exactly equal to | x == 9| FALSE|
+| != | not equal to    | x != 10| FALSE|
+| !x| 	Not x  | !x | FALSE|
+| x \|\ y | x OR y    | x == 10 \|\ x != 10|TRUE|
+| x & y  | 	x AND y | x == 10 &x != 10|FALSE|
+
+Now that you have a basic understanding of logical operators, we can use them in order to specify code to manipulate variables in a particular way. For this example, we will be working with the function `if_else()`. However, one question you may have is what is a function in R? I will describe the structure of functions, starting with a simple one. 
+
+
+
+
+
+<!--chapter:end:01-intro.Rmd-->
+
 # Introduction to Data Wrangling
 
 To introduce data wrangling, we will be working with a dataset from a study conducted in our lab. Here are the details of the study in order to understand the data manipulation more: 
@@ -14,24 +124,19 @@ On each trial in this experiment (n = 174), each participant (n = 84) sees a tar
 Before we start wrangling the data, we need to load in the packages we are using. In this lab, most of the data wrangling tools we will be using will be located in the `tidyverse()` package. What is a package? It is simply a group of functions that group of developers made that makes computations easier. To learn more about the `tidyverse` package, you may click on this [link](https://www.tidyverse.org/) and read on it! For the data wrangling we will be doing in this section, we will be primarily using a package within tidyverse called `dplyr`. to load in the package, simply type in the following code. What this code is saying is IF you don't have the `tidyverse` installed, THEN install the package. After that, load the `tidyverse` with the `library()` function.
 
 ```{r include = FALSE}
-
 knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_knit$set(root.dir = "C:/Users/alexs/Documents/Github/Emac_Rmanual/") 
 
-if(!require(knitr)){
-    install.packages("knitr")
-}
 library(knitr)
-
-if(!require(kableExtra)){
+if(!require(tidyverse)){
     install.packages("kableExtra")
 }
 library(kableExtra)
-
 library(tidyverse)
 
 ```
 
-```{r message = FALSE, warning= FALSE}
+```{r }
 if(!require(tidyverse)){
     install.packages("tidyverse")
 }
@@ -43,19 +148,24 @@ library(tidyverse)
 
 Now that we have the packages that we need, we need to load up our directory. What is a directory? It is essentially the folder we will be using to read in files, or export files into. In this directory, we have our data set of interest, `Topgown_Data`
 
+```{r  }
+setwd("C:/Users/alexs/Documents/Github/Emac_Rmanual/")
 
+
+```
 
 ### Reading in Data
 
 Now that we have our working directory set we can use the `read_csv()` function which requires one minimum argument to work which is the name of your `.csv` file. Here we are setting the variable `mydata` to the contents within the `.csv` file. It stores the contents of `Topgown_Data.csv` in what is called a data frame. What is a dataframe? it is simply a matrix where each row constitutes a variable (which can be any type you want), and rows are observations.
 
-```{r  message = FALSE, warning= FALSE}
+```{r  }
 mydata = read_csv("TopGown_Data.csv", skip_empty_rows = TRUE)
 ```
 
-```{r echo= FALSE, message = FALSE, warning= FALSE }
+```{r }
 
 mydata[1:10,] %>% knitr::kable("html") %>%
+  dplyr::select(everything(), -X1) %>%
   kableExtra::kable_styling("striped", full_width = F) %>%
   kableExtra::scroll_box(height = "500px") 
 ```
@@ -80,13 +190,13 @@ For this particular experiment we have two independent variables of interest: `v
 
 For this particular function, the first argument is going to be the dataset of interest. the dataset for we will be selecting from is `mydata`. The following arguments are simply the columns you would like to keep. 
 
-```{r results = 'hide', message = FALSE, warning= FALSE}
+```{r }
 
 dplyr::select(mydata, Participants, visual_field, constrained_to, zTOWRE_Word,zTOWRE_Nonword,	zSpelling_Dictation,zSpelling_Recogntion)
 
 ```
 
-```{r echo=FALSE, message = FALSE, warning= FALSE}
+```{r }
 
 mydata[1:10,] %>% dplyr::select(Participants, visual_field, constrained_to, zTOWRE_Word,zTOWRE_Nonword,	zSpelling_Dictation,zSpelling_Recogntion) %>%
   knitr::kable("html") %>%
@@ -99,7 +209,7 @@ mydata[1:10,] %>% dplyr::select(Participants, visual_field, constrained_to, zTOW
 
 However, another way I would suggest writing code like this is to use a function in the `tidyverse` called the pipe (`%>%`). Like the `select()` function, the first argument in all `tidyverse` functions will be your dataset of interest. The pipe simply gets a dataset, and pushes it into the first argument of a function. Here is an example.
 
-```{r results = 'hide', message = FALSE, warning= FALSE}
+```{r }
 
 mydata %>% dplyr::select(Participants, visual_field, constrained_to, zTOWRE_Word,zTOWRE_Nonword,	zSpelling_Dictation,zSpelling_Recogntion) %>%
   dplyr::select(Participants, visual_field, constrained_to)
@@ -108,7 +218,7 @@ mydata %>% dplyr::select(Participants, visual_field, constrained_to, zTOWRE_Word
 ```
 
 
-```{r echo=FALSE, message = FALSE, warning= FALSE}
+```{r }
 
 mydata[1:10,] %>% dplyr::select(Participants, visual_field, constrained_to) %>%
   knitr::kable("html") %>%
@@ -124,4 +234,35 @@ In this regard, the pipe follows simple logic. Once a dataset is manipulated by 
 Let us say that we are interested in the word freqeuncy and orthographic neighborhood size of a particular target word. we can arrange the these variables so we can display the most frequent words going in ascending order, and the words with the smallest orthographic neighborhood size in descending order.
 
 
+
+
+<!--chapter:end:02-literature.Rmd-->
+
+# Methods
+
+We describe our methods in this chapter.
+
+<!--chapter:end:03-method.Rmd-->
+
+# Applications
+
+Some _significant_ applications are demonstrated in this chapter.
+
+## Example one
+
+## Example two
+
+<!--chapter:end:04-application.Rmd-->
+
+# Final Words
+
+We have finished a nice book.
+
+<!--chapter:end:05-summary.Rmd-->
+
+`r if (knitr:::is_html_output()) '
+# References {-}
+'`
+
+<!--chapter:end:06-references.Rmd-->
 
